refactored swagger and modified tests
